# stockapp

./: .dockerignore  AGENTS.md  Dockerfile  pyproject.toml  skills-lock.json
.sisyphus/evidence/: task-10-performance-safe.txt  task-3-article-provider-observability.txt  task-3-llm-fallback-observability.txt  task-3-market-provider-observability.txt  task-4-failed-job-durable-state.txt  task-4-job-startup-visibility.txt  task-4-transaction-policy.txt  task-5-full-target-suite.txt  task-5-transaction-ownership.txt  task-5-transaction-startup.txt  task-6-explicit-batch-fakes.txt  task-6-no-session-bind-gate.txt  task-7-pages-clusters-contracts.txt  task-7-services-no-api-deps.txt  task-8-archive-url-stable.txt  task-8-batch-boundary.txt  task-8-full-target-suite.txt  task-9-route-table-stable.txt  task-9-router-ownership.txt
app/: main.py
app/api/: router.py
app/batch/: models.py  normalizers.py
app/batch/steps/: __init__.py  (+9 more)
app/core/: __init__.py  config.py  exceptions.py  llm.py  request_context.py  response.py  settings.py  timezone.py
app/db/: base.py  enums.py  identifiers.py  session.py
app/schemas/: __init__.py  batch.py  cluster.py  common.py  page.py
db/: schema_mariadb.sql  schema_postgresql.sql  test_data.sql
docs/: MariaDB_DDL_Design.md  Product_Requirement_Document.md  api_spec_doc.md  architecture_code_quality_audit.md  fastapi_postgresql_architecture.md  postgresql_ddl_design.md
docs/implement_plan/: batch_pipeline_implementation_plan.md
tests/: __init__.py  conftest.py  support.py
tests/api/: test_auth.py  test_batches.py  test_clusters.py  test_cors.py  test_pages.py
tests/batch/: test_article_content_provider.py  test_build_clusters_step.py  test_dedupe_articles_step.py  test_market_daily_orchestrator.py  test_remaining_batch_step_contracts.py  test_remaining_batch_steps.py
tests/contracts/: test_openapi_read_routes.py
tests/core/: test_db_identifiers.py  test_settings.py
tests/domains/: test_batches_service.py  test_cluster_assembler.py  test_clusters_service.py  test_page_assembler.py  test_pages_service.py
tests/integration/: test_collect_news_live.py
tests/repositories/: test_batch_job_repo.py  test_cluster_repo.py  test_news_article_processed_repo.py  test_news_article_raw_repo.py  test_news_cluster_write_repo.py  test_news_search_keyword_repo.py  test_page_snapshot_repo.py
(+47 files in other folders)
