[project]
name = "stockapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "pydantic-settings>=2.13.1",
    "psycopg[binary]>=3.2.12",
    "sqlalchemy>=2.0.44",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.fastapi]
entrypoint = "app.main:app"
