[project]
name = "stockapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi[standard]>=0.135.2",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "pydantic-settings>=2.13.1",
    "psycopg[binary]>=3.2.12",
    "sqlalchemy>=2.0.44",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.2.0",
]

[tool.fastapi]
entrypoint = "app.main:app"
